git/drone-runner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  namespace: devops
  labels:
    app.kubernetes.io/name: drone-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone-runner
    spec:
      hostNetwork: true
      containers:
        - name: drone-runner
          image: crpi-ktn0pod7hv5m0nmv.cn-beijing.personal.cr.aliyuncs.com/violin-home/drone-runner-kube:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: docker-config
              mountPath: /var/run/
            - name: kubectl-config
              mountPath: /root/.kube/
      volumes:
        - name: docker-config
          hostPath:
            path: /var/run/
            type: DirectoryOrCreate
        - name: kubectl-config
          hostPath:
            path: /root/.kube/
            type: DirectoryOrCreate
      imagePullSecrets:
        - name: aliyun-registry-secret
