git/drone-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-leader
  namespace: devops
  labels:
    app: drone-leader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-leader
  template:
    metadata:
      labels:
        app: drone-leader
    spec:
      terminationGracePeriodSeconds: 180
      containers:
        - name: drone-leader
          image: crpi-ktn0pod7hv5m0nmv.cn-beijing.personal.cr.aliyuncs.com/violin-home/drone:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: port
            - containerPort: 443
              name: ssl-port
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: drone-data
              mountPath: /var/lib/drone
      imagePullSecrets:
        - name: aliyun-registry-secret
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/hostname: master
      volumes:
        - name: drone-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: drone-leader
  namespace: devops
  labels:
    app: drone-leader
spec:
  #  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      #      nodePort: 30080
      protocol: TCP
  selector:
    app: drone-leader
